tests/error/label_not_defined2.gw
// [contains] used but not defined
goto here;
here:
goto test;
